Исправлена загрузка изображений. Улучшено качество загрузки тестовых данных.