@@ -5,16 +5,13 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.nio.file.Paths;
 import javax.imageio.ImageIO;
 import lombok.RequiredArgsConstructor;
 import main.exception.UploadImageException;
 import main.projectEnum.AllowedImageType;
 import main.service.interfaces.ImageResizer;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import static main.stringConst.StringConstant.NOT_ALLOWED_IMAGE_TYPE_ERROR_MESSAGE;
@@ -29,23 +26,20 @@ public class ImageService {
 
   private final ImageResizer imageResizer;
 
-  @Value("${upload.path}")
-  private String uploadPath;
-
   @Value("${upload.directory}")
   private String directory;
 
   @Value("${profileImage.type}")
   private String imageType;
 
-  public ResponseEntity<String> uploadCommentImage(MultipartFile image)
+  public String uploadCommentImage(MultipartFile image)
       throws UploadImageException, IOException {
     if (!imageTypeCheck(image)) {
       throw new UploadImageException(NOT_ALLOWED_IMAGE_TYPE_ERROR_MESSAGE);
     }
     String imagePath = createImagePath();
     image.transferTo(Path.of(imagePath));
-    return new ResponseEntity<>(getShortPathOfImage(imagePath), HttpStatus.OK);
+    return String.format("/%s", imagePath);
   }
 
   public String uploadProfileImage(MultipartFile image) throws IOException, UploadImageException {
@@ -53,27 +47,18 @@ public class ImageService {
     BufferedImage resizeImage = imageResizer.resizeImage(bufferedImage);
     String imagePath = createImagePath();
     ImageIO.write(resizeImage, imageType, new File(imagePath));
-    return getShortPathOfImage(imagePath);
+    return String.format("/%s", imagePath);
   }
 
   private String createImagePath() throws IOException {
     String randomStr = stringUtilsService.getRandomNumString(12);
-    String directoryStrPath = uploadPath + "/" +
+    String directoryStrPath = directory + "/" +
         randomStr.substring(0, 4) + "/" +
         randomStr.substring(4, 8) + "/" +
         randomStr.substring(8);
-    Path directoryPath = Files.createDirectories(Path.of(directoryStrPath));
-    return directoryPath + "/" + stringUtilsService.getRandomNumString(4) + JPG.getFormat();
-  }
-
-  private String getShortPathOfImage(String pathOfImage) {
-    String shortPath = "";
-    Pattern pattern = Pattern.compile(directory + ".+");
-    Matcher matcher = pattern.matcher(pathOfImage);
-    if (matcher.find()) {
-      shortPath = matcher.group();
-    }
-    return shortPath;
+    Files.createDirectories(Paths.get(directoryStrPath));
+    return directoryStrPath + "/" + stringUtilsService.getRandomNumString(4)
+        + JPG.getFormat();
   }
 
   private boolean imageTypeCheck(MultipartFile image) {
